use a javascript Image object to preload full-res images to avoid flickering when a preview overloay loads

--- a/sv/src/app.css
+++ b/sv/src/app.css
@@ -5,3 +5,10 @@
 body {
     @apply bg-white dark:bg-gray-800 text-black dark:text-white;
 }
+
+
+@layer base {
+    a {
+      @apply hover:underline text-slate-400;
+    }
+  }
